Verif/Test/Invalide/test_erreur_3.58-15.deca
// Description:
//	   test règle 3.58 
// Resultats:
//    Erreur contextuelle
//    Ligne 17 : Les types 'boolean' et 'type_classe(A)' sont incompatibles avec l'opérateur 'instanceof' (règle 3.58)
// 
// Attributs: exec incorrect automatique
//
// Historique:
//    cree le 20/01/2012

class A{
}

boolean b;
{
   b = true instanceof A;
}